# ROS_Robot

./: CMakeLists.txt  README.md  keywords.txt  package.xml  setup.py
config/: controller.yaml  urdf.rviz
launch/: ArmOnly.launch  RVIZ.launch  controller.launch  controller.yaml  display.launch  gazebo.launch  keyboard_drive.launch  minimalistic.launch  test.launch  urdf.rviz  worldedit.launch
meshes/: ArmBase_1.stl  BackPropellerL_1.stl  BackPropellerR_1.stl  BackThrusterL_1.stl  BackThrusterR_1.stl  CameraArm_1.stl  CameraBack_1.stl  CameraFront_1.stl  CameraLeft_1.stl  CameraRight_1.stl  Camera_1.stl  CenterPropellerR_1.stl  CenterThrusterL_1.stl  CenterThrusterR_1.stl  CenterThruster_1.stl  GPS_1.stl  GarbageBot_1.stl  JawL_1.stl  JawR_1.stl  L1_1.stl  L2_1.stl  L3_1.stl  L4_1.stl  L5_1.stl  L6_1.stl  base_link.stl
models/BasePlasticBox/: model.config  model.sdf
models/PlasticBoxObjectStyrofoam/: model.config  model.sdf
models/sydney_regatta/: model.sdf
nodes/: controller.py  twist2thrust.py
scripts/: RobotArm_CDR.asv  RobotArm_CDR.m  RobotArm_Controller.asv  RobotArm_Controller.m  object_tracker.py
urdf/: baat.gazebo  baat.trans  baat.xacro  materials.xacro  placeholder  ros_robot.gazebo  ros_robot.trans  ros_robot.xacro  ros_robot_ArmCamera.xacro  ros_robot_BackCamera.xacro  ros_robot_FrontCamera.xacro  ros_robot_GpsSensor.xacro  ros_robot_LeftCamera.xacro  ros_robot_RightCamera.xacro
urdf/RobotArm/: RobotArm.gazebo  (+3 more)
worlds/: ArmOnlyWorld.xacro  RobotArm.world  sydneyregatta.world.xacro  sydneyregatta.xacro  testworld.world  testworld.world.xacro  testworld.xacro
(+19 files in other folders)
