<?xml version="1.0"?>
<package format="2">
  <name>ros_robot_description</name>
  <version>0.0.0</version>
  <description>The ros_robot_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="fusion2urdf@prosystem24.de">Spacemaster85</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <replace>vmrc_gazebo</replace>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>protobuf-dev</buildtool_depend>
  <depend version_gte="2.5.17">gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>geographic_msgs</depend>
  <depend>joy</depend>
  <depend>joy_teleop</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>wave_gazebo</depend>
  <depend>xacro</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/dock_permutations"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
  
</package>
